git ignore(idk dc imi tot apare cand dau checkout)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.vsidx
 *.json
-recruitxfront/.vs/recruitxfront/v17/.wsuo
-recruitxfront/.vs/recruitxfront/config/applicationhost.config
+*.BuildWithSkipAnalyzers
+*.cache
+*.wsuo
