home page de pe login

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ RecruitXBackend/RecruitXBackend/obj/Debug/net8.0/RecruitXBackend.pdb
 RecruitXBackend/RecruitXBackend/obj/Debug/net8.0/ref/RecruitXBackend.dll
 RecruitXBackend/RecruitXBackend/obj/Debug/net8.0/refint/RecruitXBackend.dll
 recruitxfront/.vs/slnx.sqlite
+RecruitXBackend/RecruitXBackend/bin/Debug/net8.0/RecruitXBackend.exe
